Fixed button spacing top bar CSS2

--- a/CV2.css
+++ b/CV2.css
@@ -22,9 +22,7 @@ html, body {
 	border-radius: 5vh;
 	background: #AAF;
 	color: #404;
-	padding: 2vh;
-	width: 100%;
-	height: 10%;
+	padding: 2.5vh 5vh;
 	text-align: center;
 	justify-content: center;
 	cursor: pointer;
